<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MCHMIPrepareScreen_06_XX" Id="{17a435a8-be8c-0952-0012-c6218b6c602d}">
    <Declaration><![CDATA[TYPE ST_MCHMIPrepareScreen_06_XX :
STRUCT
	sTimeOfWork				: STRING;
	wsActualState			: WSTRING;
	wsActualMode			: WSTRING;
	(*	Informacje o stanach w trybie	*)
	arrState				: ARRAY [0..GVL_SaMConstans.NUMBER_OF_STATES] OF ST_MCHMIPrepareScreen_06_XX_State;
	arrStateEnabledInMode	: ARRAY [0..GVL_SaMConstans.NUMBER_OF_STATES] OF BOOL;
	(*	Dane dotyczące wyświetlania czasów 	*)
	bShowTime				: BOOL;
	iNumberModeToShowTime	: INT;
	(*	Przyciski poleceń zmiany stany	*)
	arrCmdChangeState		: ARRAY [1..GVL_SaMConstans.NUMBER_OF_COMMAND_CHANGE_STATES] OF ST_MCHMIPrepareScreen_06_XX_CmdChangeState;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>