<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_MCHMIPrepareDataForScreen_06_XX" Id="{d9ab5ce6-fe70-0537-3653-306a1d96a255}" SpecialFunc="None">
    <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		20.11.2025		TC 4024.66
	Moduł przygotowania danych dla Okna diagramu we wszystkich trybach
*)
FUNCTION_BLOCK FB_MCHMIPrepareDataForScreen_06_XX EXTENDS FB_MCHMIPrepareDataForScreen IMPLEMENTS ITF_MCHMIPrepareDataForScreen
VAR
	itfMachineControlHMI	: ITF_MCHMIMachineControl_HMI_PrepScr_06_XX;
	refstData				: REFERENCE TO ST_MCHMIPrepareScreen_06_XX;

	eActiveMode				: E_BaseMachineMode;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="ITF_PDFS" Id="{77bdb900-4748-0c69-1777-5a93fb82f601}" />
    <Method Name="ClearAfterScreen" Id="{7e29f3c8-32dc-0e9b-0dd5-360a6a118200}" FolderPath="ITF_PDFS\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		19.11.2025		TC 4024.66
	Czyści danych przy zmienia ramki po poprzedniej ramce
*)
METHOD PUBLIC ClearAfterScreen : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[SUPER^.ClearAfterScreen ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkDataHMI_06_XX" Id="{7ba8154e-6f52-018b-1a4b-e41c8b40008e}">
      <Declaration><![CDATA[METHOD PUBLIC LinkDataHMI_06_XX : BOOL
VAR_INPUT
	refstData				: REFERENCE TO ST_MCHMIPrepareScreen_06_XX;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstData REF= refstData;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkMachineControlHMI" Id="{9ff87962-8c61-02a3-2181-3d9f6e3a6623}">
      <Declaration><![CDATA[METHOD PUBLIC LinkMachineControlHMI : BOOL
VAR_INPUT
	fbMachineControlHMI	: ITF_MCHMIMachineControl_HMI_PrepScr_06_XX;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[this^.itfMachineControlHMI := fbMachineControlHMI;]]></ST>
      </Implementation>
    </Method>
    <Method Name="PrepareButtonChangeState" Id="{c643c879-9df4-04cf-0baa-e4e2b088154c}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		24.11.2025		TC 4024.66
	Obsługa przycisków zmiany stanu w diagramie
*)
METHOD PRIVATE PrepareButtonChangeState
VAR
	iI: INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR iI := 1 TO GVL_SaMConstans.NUMBER_OF_COMMAND_CHANGE_STATES DO
	IF (THIS^.refstData.arrCmdChangeState [iI].bPushed) THEN
		THIS^.refstData.arrCmdChangeState [iI].bPushed := FALSE;
		CASE iI OF
		E_SaMCommandChangeState.Abort 		: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Abort);
		E_SaMCommandChangeState.Clear 		: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Clear);
		E_SaMCommandChangeState.Reset		: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Reset);
		E_SaMCommandChangeState.Start		: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Start);
		E_SaMCommandChangeState.Stop		: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Stop);
		E_SaMCommandChangeState.Hold		: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Hold);
		E_SaMCommandChangeState.Unhold		: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Unhold);
		E_SaMCommandChangeState.Suspend		: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Suspend);
		E_SaMCommandChangeState.Unsuspend	: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Unsuspend);
		E_SaMCommandChangeState.Complete	: THIS^.itfMachineControlHMI.SetCmdChangeState (eCmdNumber := E_SaMCommandChangeState.Complete);
		END_CASE
	END_IF
END_FOR]]></ST>
      </Implementation>
    </Method>
    <Method Name="PrepareChangeMode" Id="{453f705d-c973-06a8-3dc5-042b2bbf3fb7}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		24.11.2025		TC 4024.66
	Przygotowanie danych zmiany trybu i jego zmiana
*)
METHOD PRIVATE PrepareChangeMode
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="PrepareDataForHMI" Id="{2595d879-11d4-08a2-31e5-37340d685f33}" FolderPath="ITF_PDFS\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		14.11.2025		TC 4024.66
	Metoda przygotowywania danych dla HMI 
	W niej odbywa się odpytywanie właściego elementu przez łącznik
*)
METHOD PUBLIC PrepareDataForHMI : BOOL

]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstData.sTimeOfWork := '';
THIS^.refstData.wsActualMode := THIS^.GetTextFromLabelForActiveLocation (THIS^.itfMachineControlHMI.GetActiveModeName ());
THIS^.refstData.wsActualState := THIS^.GetTextFromLabelForActiveLocation (THIS^.itfMachineControlHMI.GetActiveStateName ());
THIS^.eActiveMode := THIS^.itfMachineControlHMI.GetActiveMode ();//pobiera numer aktywnego trybu

	(*	Wyświetlenie informacji o stanach pracy				*)

THIS^.PrepareStateInfo ();

	(*	Obsługa przycisków zmiany stanów	*)
	
THIS^.PrepareButtonChangeState ();

	(*	Obsługa zmieny trybów pracy	*)
	
THIS^.PrepareChangeMode ();

	(*	Obsługa informacji zwiazanej z czasami pracy stanach i trybach	*)

IF (THIS^.refstData.bShowTime) THEN
	THIS^.PrepareTimeInfo ();
END_IF

	(*	Obsługa zewnętrzna wyświetlania danych	*)
SUPER^.PrepareDataForHMI ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="PrepareForScreen" Id="{c586df67-c716-0c6a-238f-1f6286330427}" FolderPath="ITF_PDFS\">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		19.11.2025		TC 4024.66
	Przygotowanie ramki pood tamke do wyświetlenia - tylko przygotowanie a nie przygotowanie danych do wyświetlenia
*)
METHOD PUBLIC PrepareForScreen : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[SUPER^.PrepareForScreen ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="PrepareStateInfo" Id="{31f2b598-7d5f-0aea-1856-a1e4dfeaab2e}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		24.11.2025		TC 4024.66
	Wyświetlanie inforamcji o stanach
*)
METHOD PRIVATE PrepareStateInfo
VAR 
	iJ		: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR iJ := 0 TO GVL_SaMConstans.NUMBER_OF_STATES DO
	IF (THIS^.itfMachineControlHMI.IsStateActive ()) THEN
		THIS^.refstData.arrState [iJ].iWidthFrame := 3;
		THIS^.refstData.arrStateEnabledInMode [iJ] := TRUE;
	ELSE
		THIS^.refstData.arrState [iJ].iWidthFrame := 1;
		THIS^.refstData.arrStateEnabledInMode [iJ] := FALSE;
	END_IF
	THIS^.refstData.arrState [iJ].bShowTime := THIS^.refstData.bShowTime;
	THIS^.refstData.arrState [iJ].wsNameOfState := GetTextFromLabelForActiveLocation (THIS^.itfMachineControlHMI.GetStateName (iNumber := iJ));
	IF (THIS^.refstData.arrState [iJ].bShowTime) THEN
		THIS^.refstData.arrState [iJ].sTime := THIS^.refstCommonData.itfTime.BaseLTimeToString (
			ltTime := THIS^.itfMachineControlHMI.GetStateTimeForMode (
						iMode := THIS^.refstData.iNumberModeToShowTime,
						iState := iJ
					),
			bShowMS := FALSE
		);
	ELSE	//czasy dla aktualnego trybu
		THIS^.refstData.arrState [iJ].sTime := THIS^.refstCommonData.itfTime.BaseLTimeToString (
			ltTime := THIS^.itfMachineControlHMI.GetStateTimeForMode (
						iMode := THIS^.eActiveMode,
						iState := iJ
					),
			bShowMS := FALSE
		);
	END_IF
	CASE iJ OF
		2, 5, 7, 11, 14, 17					: THIS^.refstData.arrState [iJ].dwBackgroud := 16#FFDAA520;
		1, 3, 4, 6, 8, 10, 12, 13, 15, 16	: THIS^.refstData.arrState [iJ].dwBackgroud := 16#FF6B8E23;
		9									: THIS^.refstData.arrState [iJ].dwBackgroud := 16#FF00BFFF;
	END_CASE
END_FOR]]></ST>
      </Implementation>
    </Method>
    <Method Name="PrepareTimeInfo" Id="{7e13dec8-ce1a-0aa6-25d8-9e3b9d6ddfca}">
      <Declaration><![CDATA[(*			
	RafalOS
	Rafał Osajda		24.11.2025		TC 4024.66
	Przygotowanie informacji o czasie pracy w stanie i trybie
*)
METHOD PRIVATE PrepareTimeInfo
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>